[gd_scene load_steps=5 format=3 uid="uid://hryjdy13d3t5"]

[ext_resource type="Script" uid="uid://c87e3fnqv6600" path="res://Interactibles/valve/valve.gd" id="1_yr303"]
[ext_resource type="Texture2D" uid="uid://c72b8w6x6qp1y" path="res://Interactibles/valve/valve.png" id="2_h7264"]
[ext_resource type="PackedScene" uid="uid://6pbawsjxpl8x" path="res://Interactibles/interact_popup.tscn" id="3_jl54s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yr303"]

[node name="valve" type="Node2D"]
script = ExtResource("1_yr303")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_yr303")

[node name="Valve_sprite" type="Sprite2D" parent="."]
z_index = -5
texture = ExtResource("2_h7264")

[node name="InteractPopup" parent="." instance=ExtResource("3_jl54s")]
visible = false
picture = ExtResource("2_h7264")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
